# sysdiagnose

./: .gitignore  .gitmodules  .pep8  .ruff.toml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE.txt  README.md  VERSION.txt  analyse.py  commands.md  config.py  detailed_benchmark.py  format_conversion_benchmark.py  initialise.py  initialyze.py  misc.py  out.txt  parser.txt  parser_detailed.txt  parser_optimized.txt  parsing.py  pyproject.toml  requirements.txt  scripts.md  setup.py  sysdiagnose.py  test-data-conversion.py  timestamp_benchmark.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  codestyle.yml  pycodestyle.yml  pytest.yml  release.yml  unittest.yml
.kiro/hooks/: commit-message-helper.kiro.hook
.kiro/steering/: development-rules.md  parser-analyser-guidelines.md
analysers/: apps.py  demo_analyser.py  ps_everywhere.py  ps_matrix.py  sysdiagnose-wifi-gelocation.py  timeliner.py  timesketch.py  wifi_gelocation.py  wifi_gelocation_kml.py  wifi_geolocation.py  wifi_geolocation_kml.py  yarascan.py
analyzers/: apps.py  demoAnalyser.py  sysdiagnose-demo-analyser.py  sysdiagnose-timeliner.py  sysdiagnose-wifi-gelocation-kml.py  sysdiagnose-wifi-gelocation.py  timeline.json  timeliner.py  wifiGeolocation.py  wifiGeolocationKML.py
docs/: commands.md  developer_guidelines.md  introduction.md
notebooks/: getting_started.ipynb
parsers/: accessibility_tcc.py  appinstallation.py  brctl.py  containermanager.py  crashlogs.py  demo_parser.py  itunesstore.py  lockdownd.py  logarchive.py  mobileactivation.py  mobileinstallation.py  networkextension.py  networkextensioncache.py  olddsc.py  plists.py  powerlogs.py  ps.gv  ps.py  psthread.py  remotectl_dumpstate.py  security_sysdiagnose.py  shutdownlogs.py  spindumpnosymbols.py  swcutil.py  sys.py  sysdiagnose-accessibility-tcc.py  sysdiagnose-appinstallation.py  sysdiagnose-brctl.py  sysdiagnose-containermanager.py  sysdiagnose-demo-parser.py  sysdiagnose-itunesstore.py  sysdiagnose-logarchive.py  sysdiagnose-mobileactivation.py  sysdiagnose-mobileinstallation.py  sysdiagnose-net-ext-cache.py  sysdiagnose-networkextension.py  sysdiagnose-networkextensioncache.py  sysdiagnose-olddsc.py  sysdiagnose-powerlogs.py  sysdiagnose-ps.py  (+41 more)
scripts/: Dockerfile  gen_notice_file.sh  test-data-conversion.py
scripts/elk/: README.md  digit_sysdiagnose-template.json  docker-compose.yml  log4j2.properties  logstash.conf
scripts/old/: docker-compose.yml
scripts/splunk/: README.md  add-ta.sh  docker-compose.yml
scripts/timesketch/: README.md
src/sysdiagnose/: __init__.py  __main__.py  main.py
src/sysdiagnose/analysers/: apps.py  coverage.py  demo_analyser.py  file_stats.py  mcstateshared.py  plist.py  plist_rules.py  ps_everywhere.py  ps_matrix.py  summary.py  timesketch.py  timesketch.py.broken  wifi_geolocation.py  wifi_geolocation_kml.py  yarascan.py
src/sysdiagnose/jupyter/: README.md  __init__.py  display.py  magic.py  viz.py
src/sysdiagnose/parsers/: accessibility_tcc.py  appinstallation.py  avconference_callsettings.py  battery_bdc.py  brctl.py  containermanager.py  crashlogs.py  demo_parser.py  disks.py  ioacpiplane.py  iodevicetree.py  iofirewire.py  iopower.py  ioservice.py  iousb.py  itunesstore.py  kbdebug.py  lockdownd.py  logarchive.py  logdata_statistics.py  logdata_statistics_txt.py  mcsettingsevents.py  mcstate_shared_profile.py  mobileactivation.py  mobilebackup.py  mobileinstallation.py  networkextension.py  networkextensioncache.py  olddsc.py  plists.py  powerlogs.py  ps.py  psthread.py  remotectl_dumpstate.py  security_sysdiagnose.py  shutdownlogs.py  spindumpnosymbols.py  swcutil.py  sys.py  taskinfo.py  (+7 more)
src/sysdiagnose/utils/: apollo.py  base.py  case.py  coverage_diff.py  file_stats_diff.py  jsonlogger.py  lock.py  logger.py  misc.py  multilinelog.py  sqlite2json.py  string_parser.py  summary.py  tabbasedhierarchy.py  times.py
src/sysdiagnose/utils/apollo_modules/: health_workout_general.txt  knowledge_sharesheet_feedback.txt  passes23_wallet_passes.txt  passes23_wallet_transactions.txt  powerlog_device_telephony_activity.txt  powerlog_device_telephony_registration.txt  powerlog_frontcamera_state.txt  powerlog_springboard_aggregate_bulletins.txt  query_predictions.txt  sms_chat.txt
src/sysdiagnose/utils/ioreg_parsers/: string_parser.py  structure_parser.py
tests/: __init__.py  conftest.py  test_analysers.py  test_analysers_apps.py  test_analysers_coverage.py  test_analysers_mcstateshared.py  test_analysers_plist.py  test_analysers_plist_rules.py  test_analysers_ps_everywhere.py  test_analysers_ps_file_stats.py  test_analysers_ps_matrix.py  test_analysers_summary.py  test_analysers_timeliner.py  test_analysers_timesketch.py  test_analysers_wifi_geolocation.py  test_analysers_wifi_geolocation_kml.py  test_analysers_yarascan.py  test_ioreg_struct.py  test_ios_version_compatibility.py  test_lock.py  test_logarchive.py  test_misc.py  test_multilinelog.py  test_orjson.py  test_parsers.py  test_parsers_accessibility_tcc.py  test_parsers_appinstallation.py  test_parsers_avconference_callsettings.py  test_parsers_battery_bdc.py  test_parsers_brctl.py  test_parsers_containermanager.py  test_parsers_crashlogs.py  test_parsers_disks.py  test_parsers_ioacpiplane.py  test_parsers_iodevicetree.py  test_parsers_iofirewire.py  test_parsers_iopower.py  test_parsers_ioservice.py  test_parsers_iousb.py  test_parsers_itunesstore.py  (+35 more)
tests/parsers/: test_sysdiagnoseSys.py  test_sysdiagnose_accessibility_tcc.py
utils/: base.py  misc.py  multilinelog.py  sqlite2json.py  tabbasedhierarchy.py  times.py  uuid2misp.py
