[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysdiagnose"
version = "0.1.0"
description = "A tool for sysdiagnose parsing and analysis"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = {text = "EUPL-1.2"}
authors = [
  { name="EC-DIGIT-CSIRC", email="EC-DIGIT-CSIRC@ec.europa.eu" },
]
maintainers = [
  { name="EC-DIGIT-CSIRC", email="EC-DIGIT-CSIRC@ec.europa.eu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
]
keywords = ["sysdiagnose", "analysis", "parsing", "iOS", "apple", "malware", "forensics"]
dependencies = [
  "docopt==0.6.2",
  "graphviz==0.20.3",
  "tabulate==0.9.0",
  "python-dateutil==2.9.0.post0",
  "gpxpy==1.6.2",
  "pandas==2.2.3",
  "numpy==2.2.5",
  "nska-deserialize==1.5.1",
  "yara-python==4.5.2",
  "python-json-logger==3.3.0",
  "python-magic==0.4.27",
  "jinja2==3.1.6",
  "matplotlib==3.10.1",
  "orjson>=3.9.10"
]


[project.optional-dependencies]
dev = [
  "ruff>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/EC-DIGIT-CSIRC/sysdiagnose"
Issues = "https://github.com/EC-DIGIT-CSIRC/sysdiagnose/issues"

[project.scripts]
sysdiag = "sysdiagnose.__main__:main"
saf = "sysdiagnose.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["src/**", "README.md", "LICENSE.txt"]

[tool.hatch.build.targets.wheel]
include = ["src/**", "README.md", "LICENSE.txt"]
packages = ["src/sysdiagnose"]


[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "I", "W", "N", "B", "C4", "ARG", "SIM", "ERA", "PL", "RUF"]
ignore = [
  "PLR0913",
  "E221","E225","E251","E501",
]
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"