[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysdiagnose"
version = "0.1.0"
description = "A tool for sysdiagnose parsing and analysis"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = {text = "EUPL-1.2"}
authors = [
  { name="EC-DIGIT-CSIRC", email="EC-DIGIT-CSIRC@ec.europa.eu" },
]
maintainers = [
  { name="EC-DIGIT-CSIRC", email="EC-DIGIT-CSIRC@ec.europa.eu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
]
keywords = ["sysdiagnose", "analysis", "parsing", "iOS", "apple", "malware", "forensics"]
dependencies = [
  "docopt>=0.6.0,<1.0.0",
  "graphviz>=0.20.0,<0.21.0",
  "tabulate>=0.9.0,<0.10.0",
  "python-dateutil>=2.9.0,<3.0.0",
  "gpxpy>=1.6.0,<1.7.0",
  "pandas>=2.2.0,<2.3.0",
  "numpy>=2.2.0,<2.3.0",
  "nska-deserialize>=1.5.0,<1.6.0",
  "yara-python>=4.5.0,<4.6.0",
  "python-json-logger>=3.3.0,<4.1.0",
  "python-magic>=0.4.0,<0.5.0",
  "jinja2>=3.1.0,<3.2.0",
  "matplotlib>=3.10.0,<3.11.0",
  "orjsonl>=1.0.0,<1.1.0",
  "pyparsing>=3.2, <3.3",
]


[project.optional-dependencies]
dev = [
  "ruff>=0.11.0,<0.13.0",
]

[project.urls]
Homepage = "https://github.com/EC-DIGIT-CSIRC/sysdiagnose"
Issues = "https://github.com/EC-DIGIT-CSIRC/sysdiagnose/issues"

[project.scripts]
sysdiag = "sysdiagnose.__main__:main"
saf = "sysdiagnose.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["src/**", "README.md", "LICENSE.txt"]

[tool.hatch.build.targets.wheel]
include = ["src/**", "README.md", "LICENSE.txt"]
packages = ["src/sysdiagnose"]


[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "I", "W", "N", "B", "C4", "ARG", "SIM", "ERA", "PL", "RUF"]
ignore = [
  "PLR0913",
  "E221","E225","E251","E501",
]
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"