[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysdiagnose"
version = "0.1.0"
description = "A tool for sysdiagnose parsing and analysis"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = {text = "EUPL-1.2"}
authors = [
  { name="EC-DIGIT-CSIRC", email="EC-DIGIT-CSIRC@ec.europa.eu" },
]
maintainers = [
  { name="EC-DIGIT-CSIRC", email="EC-DIGIT-CSIRC@ec.europa.eu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
]
keywords = ["sysdiagnose", "analysis", "parsing", "iOS", "apple", "malware", "forensics"]
dependencies = [
  "docopt>=0.6.0,<1.0.0",
  "graphviz>=0.20.0,<0.21.0",
  "tabulate>=0.9.0,<0.11.0",
  "python-dateutil>=2.9.0,<3.0.0",
  "gpxpy>=1.6.0,<1.7.0",
  "pandas>=2.2.0,<3.1.0",
  "numpy>=2.2.0,<2.5.0",
  "nska-deserialize>=1.5.0,<1.6.0",
  "yara-python>=4.5.0,<4.6.0",
  "python-json-logger>=3.3.0,<4.1.0",
  "python-magic>=0.4.0,<0.5.0",
  "jinja2>=3.1.0,<3.2.0",
  "matplotlib>=3.10.0,<3.11.0",
  "orjsonl>=1.0.0,<1.1.0",
  "pyparsing>=3.2, <3.4",
  "dateparser>=1.2.0"
]


[project.optional-dependencies]
dev = [
  "ruff>=0.11.0,<0.16.0",
]

[project.urls]
Homepage = "https://github.com/EC-DIGIT-CSIRC/sysdiagnose"
Issues = "https://github.com/EC-DIGIT-CSIRC/sysdiagnose/issues"

[project.scripts]
sysdiag = "sysdiagnose.__main__:main"
saf = "sysdiagnose.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["src/**", "README.md", "LICENSE.txt"]

[tool.hatch.build.targets.wheel]
include = ["src/**", "README.md", "LICENSE.txt"]
packages = ["src/sysdiagnose"]


[tool.ruff]
line-length = 128
target-version = "py311"
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

# E = Style errors from pycodestyle (PEP8)
# F = Logic and syntax errors from pyflakes
# B = flake8-bugbear - find bugs and design problems
# I = import sort order
# W = Warnings (pycodestyle) > kept for compatibility with Github action
# N = pep8-naming
# UP = pyupgrade - use latest python syntax
# C4 = comprehensions
# ANN = require type annotations
# SIM = flake8-simplify - make code more concise and readable
# T20 = flake8-print - disallow print statements (use logging instead)
[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "N", "UP", "C4", "SIM", "T20"]
ignore = [
  "PLR0913",
  "E221", "E225", "E251", "E501",  # Match pycodestyle
  "E302", "E266",                   # Add missing ones
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["T201"]
"src/sysdiagnose/__main__.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"